# Events-Aggregator

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  events.json  pyproject.toml  t.py  test.py
.github/workflows/: ci.yml  deploy.yml
app/: Dockerfile  config.py  main.py  setting.py  test.py
app/api/: deps.py  exception_handlers.py  route.py  router.py
app/db/: db.py
app/domain/: exceptions.py  models.py
app/migrations/: env.py
app/repository/: events.py  test_connection.py
app/service/: sync_worker.py
app/shemas/: event.py  sync.py  tickets.py
app/usecases/: create_ticket.py  get_events.py  sync_events.py
app/utils/: generator_seats.py  pagination.py
migrations/: env.py
migrations/versions/: 034396eb2aeb_fix_timezones2.py  23f0e20e6678_fix_id_generating.py  2993ab971687_2fix_retry_for_outbox.py  3c7ed5d88a4a_add_place_event.py  4ff4019ff983_enum_fail.py  64786a97378c_add_outbox.py  6c4578e45ede_del_relation.py  771abab20206_init.py  (+9 more)
src/: main.py  setting.py
test/: test_events_api.py  test_events_provider.py  test_events_repository.py  test_get_events_usecase.py  test_pagination.py  test_sync_api.py  test_sync_events_usecase.py  test_tickets_api.py  test_tickets_repository.py
tests/: conftest.py  test_events_api.py  test_events_provider.py  test_events_repository.py  test_get_events_usecase.py  test_outbox_provider.py  test_outbox_repository.py  test_outbox_task.py  test_outbox_usecase.py  test_pagination.py  test_sync_api.py  test_sync_events_usecase.py  test_sync_task.py  test_tickets_api.py  test_tickets_repository.py
(+77 files in other folders)
