[project]
name = "events-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncio>=4.0.0",
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "postgres>=4.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]
